Bug 111903 - FILESAVE: PPT, PPTX: Placeholder text lost upon roundtrip
Summary: FILESAVE: PPT, PPTX: Placeholder text lost upon roundtrip
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Attila Bakos (NISZ)
URL:
Whiteboard: target:7.2.0
Keywords: filter:ppt, filter:pptx
: 77552 (view as bug list)
Depends on:
Blocks: PPT PPTX-Textbox
  Show dependency treegraph
 
Reported: 2017-08-19 01:08 UTC by Aron Budea
Modified: 2022-09-26 02:23 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Sample PPTX with no text (29.53 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2017-08-19 01:08 UTC, Aron Budea
Details
Sample PPT with no text (84.50 KB, application/vnd.ms-powerpoint)
2017-08-19 01:09 UTC, Aron Budea
Details
The example file in PP and its Impress-saved version in 7.2 (106.58 KB, image/png)
2021-01-28 12:39 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2017-08-19 01:08:26 UTC
Created attachment 135650 [details]
Sample PPTX with no text

- Roundtrip the attached "empty" PPT and PPTX samples in Impress.
- Open the resulting files either in Impress or PowerPoint.

=> The placeholder text boxes are empty (they can't even be selected in Impress). Since they're there when the files are first opened, this is an export issue.

Observed using LO 5.4.0.3 & 4.0.0.3 / Windows 7.
Using the older version results in other issues as well that are gone by now. Possibly the issue with placeholder texts being lost during import was fixed in bug 103792.

The PPT shows additional oddities upon opening, those will be reported in a different ticket.
Comment 1 Aron Budea 2017-08-19 01:09:10 UTC
Created attachment 135651 [details]
Sample PPT with no text
Comment 2 Xisco Faulí 2017-08-19 12:31:19 UTC
Confirmed in

Version: 6.0.0.0.alpha0+
Build ID: a19dc104ec008f0bb44676d63d4764c6d7442a0d
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 3 QA Administrators 2018-10-22 02:48:47 UTC Comment hidden (obsolete)
Comment 4 Aron Budea 2018-10-23 21:53:06 UTC
Still occurs with 6.2 alpha1 / Windows 7.
Comment 5 Buovjaga 2019-09-23 12:42:13 UTC
Still repro with both files

Version: 6.4.0.0.alpha0+ (x64)
Build ID: bda1d88f2bfa21202725ab9c567b3cccba3c1f0b
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-09-15_04:18:20
Locale: fi-FI (fi_FI); UI-Language: en-US
Calc: threaded
Comment 6 NISZ LibreOffice Team 2021-01-28 12:39:49 UTC
Created attachment 169233 [details]
The example file in PP and its Impress-saved version in 7.2

This is still a problem in:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 7eb289c49cc7245ef3001a39be0c15d06bbe875b
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL

However, the shapes are retained in fact, they are visible in the Navigator.
They don't have a visible border and they lose the "Click to add Text" placeholders which makes them practically invisible.
Comment 7 Commit Notification 2021-04-29 08:49:29 UTC
Attila Bakos (NISZ) committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b6b02e0b4c9d739836e1f61a886ea45b01e6696e

tdf#111903 tdf#137152 PPTX export: fix placeholders

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Buovjaga 2021-04-29 14:27:42 UTC
Verified

Arch Linux 64-bit
Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 9224109de3cf2b620ff1165d31e9fb2a4cd680cf
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 29 April 2021
Comment 9 NISZ LibreOffice Team 2021-06-08 06:24:29 UTC
*** Bug 77552 has been marked as a duplicate of this bug. ***