Sd: Do not drop placeholders away on pptx export

Related tickets: tdf#111903 and tdf#137152

Empty placeholders used to become white empty
custom shapes on the slides, now they keep
their type. Follow up commit will do the fine
tuning with the properties export.

Change-Id: Ie8bd6a611f5fb43bcaa55f6b2f5b07daf731b163